--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <h1>
+  <header aria-label="header" role="banner">
+    <nav role="navigation" aria-label="navigation">
+      <h1 role="logo" aria-label="Restaurant Reviews">
         <a href="/">Restaurant Reviews</a>
       </h1>
     </nav>
   </header>
 
-  <main id="maincontent">
-    <section id="map-container">
+  <main id="maincontent" tabindex="-1" role="main">
+    <section id="map-container" role="geomap" tabindex="-1">
       <div id="map"></div>
     </section>
-    <section>
-      <div class="filter-options">
-        <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+    <section aria-label="neighborhoods-select">
+      <div class="filter-options" role="listbox">
+        <h2 aria-label="Filter Results">Filter Results</h2>
+        <select aria-describedby="neighborhoods" id="neighborhoods-select" name="neighborhoods" role="option" tabindex="0"  onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select aria-describedby="cuisines" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list"></ul>
+      <ul aria-label="restaurants list" id="restaurants-list"></ul>
     </section>
   </main>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
@@ -45,7 +45,7 @@
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
 
 
-  <footer id="footer">
+  <footer role="contentinfo" tabindex="-1" id="footer">
     Copyright (c) 2017
     <a href="/">
       <strong>Restaurant Reviews</strong>
